# mcp-genelab

./: .gitignore  README.md  claude_desktop_config.json  pyproject.toml
config/: claude_desktop_config.json  mcp.json
docs/: examples.md
docs/.ipynb_checkpoints/: examples-checkpoint.md
src/mcp_genelab/: __init__.py  server.py
